Fix labels so that even when ships get small, the label disappears and people can see behind them again.

--- a/client/sass/cosmos.scss
+++ b/client/sass/cosmos.scss
@@ -72,6 +72,8 @@ html, body {
 .username-label.tooltip {
   display: block;
   z-index: 1;
+  cursor: default;
+  @include user-select(none);
 }
 
 @import 'hud';
